--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,5 +21,5 @@ artifacts:
     - templates/test.html
     - scripts/mkdir.sh
     - scripts/start_flask.sh
-    - scripts/stop_flask1.sh
-    - scripts/stop_flask.py
+    # - scripts/stop_flask1.sh
+    # - scripts/stop_flask.py
